# GrabPic

./: .gitignore  README.md  app.py  main.py  paths_config.yaml  pyproject.toml
src/: cluster_embeddings.py  create_face_embeddings.py  extract_faces.py  query.py  utils.py  vector_store.py
